<resources>
    <string name="app_name">Mercy &amp; Edwin</string>
    <string name="action_settings">Settings</string>

    <string name="action_add">Add Guest</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_save">SAVE</string>
    <string name="action_delete">Delete</string>
    <string name="action_remove">Remove</string>

    <string name="blank" />

    <string name="display_name">%1$s %2$s %3$s</string>
    <string name="title_activity_guest">New Guest</string>
    <string name="title_activity_table">New Table</string>

    <string name="adults">Adults</string>
    <string name="admin">Admin</string>
    <string name="all">All</string>
    <string name="children">Children</string>
    <string name="error_phone_required">Phone is required by Transport guys</string>
    <string name="default_input_error">Invalid input</string>
    <string name="delete">Delete</string>
    <string name="directions">Directions</string>
    <string name="email">Email</string>
    <string name="empty_list">Empty list</string>
    <string name="facebook_event">Facebook Event</string>
    <string name="family">Family</string>
    <string name="feed">Feed</string>
    <string name="first_name">First name</string>
    <string name="guests">Guests</string>
    <string name="guests_c">Guests:</string>
    <string name="guests_count">%1$d Guests</string>
    <string name="last_name">Last name</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="oude">Baraka SDA Church</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="is_child">Child?</string>
    <string name="is_family">Family?</string>
    <string name="needs_transport">Needs Transport?</string>
    <string name="need_transport">Need Transport</string>
    <string name="search">Search</string>
    <string name="table_num">Table Number</string>
    <string name="table_number">Table #%1$d</string>
    <string name="tables">Tables</string>
    <string name="summary">Summary</string>
    <string name="vegetarian">Vegetarian?</string>
    <string name="vegetarian_info">Vegetarian</string>
    <string name="vip">VIP?</string>
    <string name="venue">Venue</string>
    <string name="wedding_registry">Gift Registry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="permission_contacts_rationale">Contacts permission is needed to find contacts you\'re familiar with.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>

    <string name="venue_address">
        PO-BOX 7023-00300 Nairobi\n\nhttp://mercy-weds-edwin.firebaseapp.com/
    </string>



    <string name="transition_post_feed" translatable="false">post_feed</string>
    <string name="dialog_text">Share an Update..</string>
    <string name="post_to">Post to Feed</string>

    <string name="uber_api_key">T-o0wo3zLSUqbVkJ8nYsnmHuYcda1uRO</string>
    <string name="maps_key">AIzaSyBzPJmvyPYDEKWYIZCylO0MSdnC5-fAiC8</string>

    <string name="grooms">GROOMS</string>
    <string name="maidss">MAIDS</string>
    <string name="couple">couple</string>
</resources>
