<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:clipToPadding="false"
    android:scrollbars="vertical"
    android:scrollbarStyle="outsideOverlay"
    tools:context="com.tony.wedding.ui.GuestActivity"
    tools:showIn="@layout/activity_guest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/blank"
                android:src="@drawable/ic_account_circle" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginRight="@dimen/spacing_normal"
                android:layout_weight="1"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/title_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="20">

                    <EditText
                        android:id="@+id/edt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName|textCapWords"
                        android:nextFocusDown="@+id/edt_lastname" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="20">

                    <EditText
                        android:id="@+id/edt_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName|textCapWords" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/blank"
                android:src="@drawable/ic_mail" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginRight="@dimen/spacing_normal"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/blank"
                android:src="@drawable/ic_call" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginRight="@dimen/spacing_normal"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/blank"
                android:src="@drawable/ic_help" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingRight="@dimen/spacing_medium"
                android:paddingLeft="@dimen/spacing_medium">

                <CheckedTextView
                    android:id="@+id/check_child"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:text="@string/is_child" />

                <CheckedTextView
                    android:id="@+id/check_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:text="@string/is_family" />

                <CheckedTextView
                    android:id="@+id/check_transport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:text="@string/needs_transport" />

                <CheckedTextView
                    android:id="@+id/check_vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:text="@string/vegetarian" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_medium"
            android:theme="@style/Widget.Button"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/spacing_medium"/>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
