<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:uber="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="400dp">

            <android.support.v7.widget.CardView style="@style/Widget.CardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_large">

                    <TextView
                        style="@style/Widget.TextView"
                        android:text="@string/oude"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        style="@style/Widget.TextView"
                        android:text="@string/venue_address"
                        android:linksClickable="true"
                        android:textIsSelectable="true"
                        android:autoLink="web"
                        android:textColorLink="@color/colorPrimaryDark"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/spacing_medium">
                        <Button
                            android:id="@+id/btn_navigate"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            android:layout_marginLeft="@dimen/spacing_medium"
                            android:layout_marginRight="@dimen/spacing_medium"
                            android:text="@string/directions"
                            android:theme="@style/Widget.Button.Navigate"
                            android:drawableLeft="@drawable/ic_directions"
                            android:drawableStart="@drawable/ic_directions"
                            android:drawablePadding="@dimen/spacing_medium"/>

                        <com.uber.sdk.android.rides.RequestButton
                            android:id="@+id/btn_uber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            uber:client_id="@string/uber_api_key"
                            uber:style="black"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="@dimen/spacing_normal"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </ScrollView>


    </FrameLayout>

</android.support.v4.widget.NestedScrollView>