<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="dismiss"
    tools:context=".ui.PostActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/post_margin"
        android:background="@drawable/dialog_background"
        android:elevation="@dimen/z_fab"
        android:orientation="vertical"
        android:transitionName="@string/transition_post_feed">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/spacing_normal">

            <ImageView
                android:id="@+id/check_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_micro"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/blank"
                android:onClick="dismiss"
                android:src="@drawable/ic_close_24dp"
                android:tint="@android:color/black"
                android:visibility="visible"
                tools:visibility="gone" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawablePadding="@dimen/spacing_micro"
                android:text="@string/admin"
                android:textSize="@dimen/text_size_xsmall"
                android:visibility="gone"
                app:thumbTextPadding="@dimen/spacing_micro"
                tools:visibility="visible" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_large"
            android:paddingLeft="@dimen/spacing_medium"
            android:paddingRight="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_img"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:contentDescription="@string/blank"
                    android:src="@drawable/ic_account_circle"
                    app:civ_border_color="@color/scrim"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/user_name"
                    style="@style/Widget.TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/body_text_3"
                    tools:text="John Smith" />


            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edt_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="200"
                    android:minLines="3" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_micro"
                android:drawablePadding="@dimen/spacing_micro"
                android:padding="@dimen/padding_normal"
                android:text="@string/post_to"
                android:textAppearance="@style/TextAppearance.DarkButton"
                android:theme="@style/Widget.Button.Post" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>