<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/nav_header" />

    <android.support.v7.widget.CardView
        style="@style/Widget.CardView"
        android:layout_margin="@dimen/spacing_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/blank"
                    android:src="@drawable/account_multiple"
                    android:tint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_normal"
                    android:paddingRight="@dimen/spacing_normal">

                    <TextView
                        android:id="@+id/txt_guests_count"
                        style="@style/Widget.TextView.None"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_xlarge"
                        android:textStyle="bold"
                        tools:text="180" />

                    <TextView
                        style="@style/Widget.TextView.None"
                        android:gravity="center"
                        android:paddingLeft="@dimen/spacing_micro"
                        android:paddingRight="@dimen/spacing_micro"
                        android:text="@string/guests"
                        android:textColor="@color/body_text_3" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_normal"
                android:paddingLeft="56dp"
                android:paddingRight="56dp"
                android:paddingTop="@dimen/spacing_normal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_adults_count"
                        style="@style/Widget.TextView.None"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_xlarge"
                        tools:text="180" />

                    <TextView
                        style="@style/Widget.TextView.None"
                        android:gravity="center"
                        android:paddingLeft="@dimen/spacing_micro"
                        android:paddingRight="@dimen/spacing_micro"
                        android:text="@string/adults"
                        android:textColor="@color/body_text_3" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_kids_count"
                        style="@style/Widget.TextView.None"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_xlarge"
                        tools:text="180" />

                    <TextView
                        style="@style/Widget.TextView.None"
                        android:gravity="center"
                        android:paddingLeft="@dimen/spacing_micro"
                        android:paddingRight="@dimen/spacing_micro"
                        android:text="@string/children"
                        android:textColor="@color/body_text_3" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_medium"
                android:paddingRight="@dimen/spacing_medium">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/blank"
                    android:src="@drawable/ic_face"
                    android:tint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium">

                    <TextView
                        android:id="@+id/txt_family_count"
                        style="@style/Widget.TextView.None"
                        android:textSize="@dimen/text_size_xlarge"
                        tools:text="180" />

                    <TextView
                        style="@style/Widget.TextView.None"
                        android:layout_width="wrap_content"
                        android:text="@string/family"
                        android:textColor="@color/body_text_3" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@color/divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_medium"
                android:paddingRight="@dimen/spacing_medium">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/blank"
                    android:src="@drawable/car"
                    android:tint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium">

                    <TextView
                        android:id="@+id/txt_transport_count"
                        style="@style/Widget.TextView.None"
                        android:textSize="@dimen/text_size_xlarge"
                        tools:text="180" />

                    <TextView
                        style="@style/Widget.TextView.None"
                        android:layout_width="wrap_content"
                        android:text="@string/need_transport"
                        android:textColor="@color/body_text_3" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@color/divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_medium"
                android:paddingRight="@dimen/spacing_medium">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/blank"
                    android:src="@drawable/food_apple"
                    android:tint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium">

                    <TextView
                        android:id="@+id/txt_vegan_count"
                        style="@style/Widget.TextView.None"
                        android:textSize="@dimen/text_size_xlarge"
                        tools:text="180" />

                    <TextView
                        style="@style/Widget.TextView.None"
                        android:layout_width="wrap_content"
                        android:text="@string/vegetarian_info"
                        android:textColor="@color/body_text_3" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:background="@color/divider" />
</LinearLayout>